--- a/html/admin.html
+++ b/html/admin.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="../js/auth.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lt;OMG-Tools&gt;</title>
-    <link rel="shortcut icon" href="/image/icone.ico" />
+    <link rel="shortcut icon" href="../image/icone.ico" />
     <link rel="stylesheet" href="../css/admin_header.css">
     <link rel="stylesheet" href="../css/admin_body.css">
 </head>
@@ -18,4 +19,5 @@
     <script src="../js/admin.js">
     </script>
 </body>
+
 </html>
