--- a/html/get_storage.html
+++ b/html/get_storage.html
@@ -1,12 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>&lt;OMG-Tools&gt;</title>
+    <link rel="shortcut icon" href="../image/icone.ico" />
+    <link rel="stylesheet" href="../css/access_header.css">
+    <link rel="stylesheet" href="../css/loading.css">
+</head>
+<body>
 <header class="toolbar toolbar-header">
     <label class="title">&lt;OMG-Tools&gt;</label>
 </header>
 <div class="loading">
-    <img src="/image/loading.gif" alt="icone"/>
+    <img src="../image/loading.gif" alt="icone"/>
 </div>
-
-
-
 <script>
 function js(){
     get= new XMLHttpRequest
@@ -16,7 +24,6 @@ function js(){
     get.send()
     get.onload=(e)=>{
         var res =JSON.parse(get.responseText)
-        console.log(res, !!res.html, !res.js)
         if(!res.html && !!res.js){
             let algod =document.createElement('script')
             algod.src= res.js
@@ -35,11 +42,27 @@ function js(){
     
 }
 var token=localStorage.getItem('token') || null
-console.log(token)
 if(!token){
     alert('user not logged')
     location.href= "/login"
 }
-else{js()}
-location.replace()
+else{
+    validate= new XMLHttpRequest
+    validate.open("POST",location.protocol+"//"+location.hostname+':'+ location.port+'/validate')
+    validate.setRequestHeader("Content-Type","application/json")
+    validate.send('{"token":"'+token+'"}')
+    validate.onload=(e)=>{
+        console.log(validate.responseText)
+        token = JSON.parse(validate.responseText).token
+    
+        if(token==null){
+            alert('user not logged')
+            location.href="/login"}
+        else{
+            js()
+        }
+    }
+}
 </script>
+</body>
+</html>
