--- a/html/login.html
+++ b/html/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lt;OMG-Tools&gt;</title>
-    <link rel="shortcut icon" href="/image/icone.ico" />
-    <link rel="stylesheet" href="/css/access_header.css">
-    <link rel="stylesheet" href="/css/access_body.css">
+    <link rel="shortcut icon" href="../image/icone.ico" />
+    <link rel="stylesheet" href="../css/access_header.css">
+    <link rel="stylesheet" href="../css/access_body.css">
 </head>
 <body>
 <header class="toolbar toolbar-header">
@@ -14,7 +14,7 @@
 </header>
 <section>
 <div id="icon">
-    <img class="icon" src="/image/icone.png">
+    <img class="icon" src="../image/icone.png">
 </div>
 
 <div class="inputs">
@@ -26,7 +26,6 @@
 </div>
 
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script src="../js/login.js"></script>
 </body>
 </html>
