--- a/html/menu.html
+++ b/html/menu.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="../js/auth.js"></script>
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lt;OMG-Tools&gt;</title>
-    <link rel="shortcut icon" href="/image/icone.ico" />
-    <link rel="stylesheet" href="/css/access_header.css">
-    <link rel="stylesheet" href="/css/menu_body.css">
+    <link rel="shortcut icon" href="../image/icone.ico" />
+    <link rel="stylesheet" href="../css/access_header.css">
+    <link rel="stylesheet" href="../css/menu_body.css">
 </head>
 <body>
 <header class="toolbar toolbar-header">
@@ -16,7 +18,7 @@
 <div class="page">
     <div class="menu">
         <div class="menu top">
-            <img class="main" type="image/png" src="/image/icone.png" alt="menu">
+            <img class="main" type="image/png" src="../image/icone.png" alt="menu">
         </div>
         <div class="menu bottom">
             <div class="menu bottom top">
@@ -63,7 +65,6 @@
     
 </div>
 </section>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>-->
-<script src="/js/menu.js"></script>
+<script src="../js/menu.js"></script>
 </body>
 </html>
