sistema de pedidos e amizades terminados. Bloqueio de usuarios e status disponivel pendente

--- a/html/admin.html
+++ b/html/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="../js/auth.js"></script>
+<script src="../js/admin.js"></script></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,6 @@
     </navbar>
     <section>
     </section>
-    <script src="../js/admin.js">
     </script>
 </body>
 
