--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lt;OMG-Tools&gt;</title>
-    <link rel="shortcut icon" href="/image/icone.ico" />
-    <link rel="stylesheet" href="/css/access_header.css">
-    <link rel="stylesheet" href="/css/cadastro_body.css">
+    <link rel="shortcut icon" href="../image/icone.ico" />
+    <link rel="stylesheet" href="../css/access_header.css">
+    <link rel="stylesheet" href="../css/cadastro_body.css">
 </head>
 <body>
 <header class="toolbar toolbar-header">
@@ -14,7 +14,7 @@
 </header>
 <section>
 <div id="icon">
-<img class="icon" src="/image/icone.png">
+<img class="icon" src="../image/icone.png">
 </div>
 <div class="corpo">
 <div class="entrada">
@@ -23,7 +23,7 @@
     <input type="text" id="password" value="Password" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
     </div>
     <div class='file'>
-    <label for="img-upload"><img class="fileimg" src="/image/icone.png"></label>
+    <label for="img-upload"><img class="fileimg" src="../image/icone.png"></label>
     <input id="img-upload" class="inputimg" type="file" accept=".png,.jpg, .jpeg"/>
     </div>
 </div>
