--- a/html/message.html
+++ b/html/message.html
@@ -46,7 +46,6 @@
                 <a class='navl n' onclick="friends_all()">Todos</a>
                 <a class='navl n' onclick="pedidos()">Pendentes</a>
                 <a class='navl n' onclick="blocked()">Bloqueados</a>
-                <a class='navl add' onclick="add()">Adicionar amigo</a>
             </div>
             <div class="navr"><button>right</button></div>
             
@@ -54,12 +53,14 @@
         <div class="somecounts">
             <div class="counts">
                 <div class="message">
-                    <label class="f lbl"></label>
-                    <a class="f area"></a>
+                    <>
+                </div>
+                <div class="content bottom">
+                    <button>algo</button>
                 </div>
             </div>
             <div class="content hiddable">
-                <label class="content-hlbl">ativo agora</label>
+                <label class="content-lbl">ativo agora</label>
             </div>
         </div>
     </div>
