--- a/html/menu.html
+++ b/html/menu.html
@@ -16,6 +16,31 @@
 </header>
 <section>
 <div class="page">
+    <div class="user-config">
+        <div class='user-options'>
+            <div class="options">
+            </div>
+        </div>
+        <div class="user-content">
+
+        </div>
+        <div class="user-close">
+            <button onclick='user_config_close()'>
+                <img style='width: 11px;height: 11px;margin-top: 4px;' src='../image/unaccept.png'>
+            </button>
+        </div>
+    </div>
+    <div class='set-status'>
+        <div>
+        <button class='no'><img src="../image/online.png" alt=""><label>Disponível</label></button>
+        <div class='div'></div>
+        <button class="no"><img src="../image/ausente.png" alt=""><label>Ausente</label></button>
+        <button class="yes"><img src="../image/ocupado.png" alt=""><label>Ocupado</label><div class="ce"><label class='min'>Você não irá mais receber notificações na área de trabalho</label></div></button>
+        <button class="yes"><img src="../image/invisivel.png" alt=""><label>Inivisível</label><div class="ce"><label class='min'>Você não aparece como disponível, mas terá acesso completo ao &lt;OMG-Tools&gt;</label></div></button>
+        <div class='div'></div>
+        <button class='no'><img class='carinha' src="../image/carinha.png" alt=""><label class='p'>Definir status personalizado</label></button>
+    </div>
+    </div>
     <div class="menu">
         <div class="menu top">
             <img class="main" type="image/png" src="../image/icone.png" alt="menu">
@@ -35,7 +60,12 @@
         <div class="option center-content"><a id="amigos" class="option-selected" onclick="selected(this)"><img class="opt" src="../image/Amigos.png"><label>Amigos</label></a></div>
         </div>
         <div class="option bottom">
-            <button>algo</button>
+            <img onclick='user_status()' alt="user_icon"/>
+            <img class='status'>
+            <label></label>
+            <div>
+                <button onclick="user_config()"><img/></button>
+            </div>
         </div>
     </div>
     <div class="content">
