--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -19,8 +19,8 @@
 <div class="corpo">
 <div class="entrada">
     <div class="inputs">
-    <input type="text" id="username" value="Username" onmouseover="user()" onmouseout="user(true)"><p></p>
-    <input type="text" id="password" value="Password" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
+    <input type="text" id="username" value="Username" onclick="user()"  onmouseover="user()" onmouseout="user(true)"><p></p>
+    <input type="text" id="password" value="Password" onclick="pass(this.type='password')" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
     </div>
     <div class='file'>
     <label for="img-upload"><img class="fileimg" src="../image/icone.png"></label>
