--- a/html/login.html
+++ b/html/login.html
@@ -18,8 +18,8 @@
 </div>
 
 <div class="inputs">
-    <input type="text" id="username" value="Username" onmouseover="user()" onmouseout="user(true)"><p></p>
-    <input type="text" id="password" value="Password" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
+    <input type="text" id="username" value="Username" onclick="user()" onmouseover="user()" onmouseout="user(true)"><p></p>
+    <input type="text" id="password" value="Password" onclick="pass(this.type='password')" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
 </div>
 <div id="confirm">
     <button id="submit" onclick="submit('/login')">Submit</button>
