--- a/html/menu.html
+++ b/html/menu.html
@@ -164,5 +164,7 @@
 </div>
 </section>
 <script src="../js/menu.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js'></script>
+<script src="../js/conn.js"></script>
 </body>
 </html>
